# Cynapx

./: .dockerignore  .gitignore  .mcp.json  .npmignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GUIDE_EN.md  GUIDE_KR.md  LICENSE  README.md  README_KR.md  RELEASE_NOTES_v3.0.0.md  RELEASE_NOTES_v3.1.0.md  cynapx-0.1.0.tgz  package-lock.json  package.json  setup.ps1  test_api_spec.py  tsconfig.json  vitest.config.ts
.claude/: launch.json
.gemini/: rules.md
agent_docs/: ai_agent_bootstrap_guide.md  api_specification.md  diagnostic-v10.md  diagnostic-v11.md  diagnostic-v12.md  diagnostic-v13.md  diagnostic-v14.md  diagnostic-v15.md  diagnostic-v16.md  diagnostic-v17.md  diagnostic-v18.md  diagnostic-v19.md  diagnostic-v2.md  diagnostic-v20.md  diagnostic-v21.md  diagnostic-v22.md  diagnostic-v23.md  diagnostic-v24.md  diagnostic-v25.md  diagnostic-v26.md  diagnostic-v27.md  diagnostic-v28.md  diagnostic-v29.md  diagnostic-v3.md  diagnostic-v30.md  diagnostic-v4.md  diagnostic-v5.md  diagnostic-v6.md  diagnostic-v7.md  diagnostic-v8.md  diagnostic-v9.md  execute-tool-refactor-plan.md  improvement-plan.md  incremental_updating_rules.md  logical_scheme_and_indexing_strat.md  phase12-plan.md  phase13-plan.md  phase14-plan.md  phase15-plan.md  phase16-plan.md  (+21 more)
docs/: extending-language-support.md
examples/: ruby-language-provider.ts
schema/: schema.sql
scripts/: apply_schema.ts  build-copy.js  debug_db_state.ts  docker-smoke.sh  extract_evidence.ts  get_summary.ts  integration-test.js  (+3 more)
src-native/: Cargo.toml  package.json
src-native/src/: lib.rs
(+191 files in other folders)
