[package]
name = "cynapx-native"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.2", default-features = false, features = ["napi3", "serde-json"] }
napi-derive = "2.12.2"
tree-sitter = "0.20"
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
napi-build = "2.0.1"
